make np.complex_ and np.float_ explicit

--- a/examples/MPM/example.ipynb
+++ b/examples/MPM/example.ipynb
@@ -97,7 +97,7 @@
     "gf_f2.get_matsubara(n_w)\n",
     "#G_w: Matsubara data; w: corresponding Matsubara frequencies\n",
     "w = gf_f1.w\n",
-    "G_w = np.zeros((w.size, n_orb, n_orb), dtype=np.complex_)\n",
+    "G_w = np.zeros((w.size, n_orb, n_orb), dtype=np.complex128)\n",
     "for i in range(n_orb):\n",
     "    for j in range(n_orb):\n",
     "        if i == j:\n",
